--- a/Vinos/Properties/AndroidManifest.xml
+++ b/Vinos/Properties/AndroidManifest.xml
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.vinos.vinos">
 	<uses-sdk android:minSdkVersion="16" />
+	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+	<uses-permission android:name="android.permission.RECORD_AUDIO" />
+	<uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+	<uses-permission android:name="android.permission.SET_ACTIVITY_WATCHER" />
+	<uses-permission android:name="android.permission.VIBRATE" />
 	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name" android:theme="@android:style/Theme.Material.Light"></application>
-	<service android:name= "service.myService"></service>
+	<service android:name="service.myService"></service>
 </manifest>
