--- a/Vinos/Vinos.csproj
+++ b/Vinos/Vinos.csproj
@@ -97,6 +97,8 @@
     <Compile Include="Adapters\MomDeviceAdapter.cs" />
     <Compile Include="helpers\UserLocalStore.cs" />
     <Compile Include="models\User.cs" />
+    <Compile Include="helpers\ImageHelper.cs" />
+    <Compile Include="models\ordenVinosDTO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
